--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /* PAGE SETTINGS */
 :root {
-    --colorDeTextoHeader: white;
-    --colorDeFondoHeader: red;
+    --colorDeTextoHeader: rgb(255, 255, 255);
+    --colorDeFondoHeader: rgb(61, 56, 56);
 
-    --colorDeTextMain: white;
-    --colorDeFondoMain: yellow;
+    --colorDeTextMain: rgb(255, 255, 255);
+    --colorDeFondoMain: rgba(255, 255, 0, 0);
 
-    --colorDeTextFooter: white;
-    --colorDeFondoFooter: blue;
+    --colorDeTextFooter: rgb(255, 255, 255);
+    --colorDeFondoFooter: rgba(255, 0, 0, 0);
 }
 
 
